
[workspace]
members = ["examples/simple", "mysh-derive"]

[workspace.dependencies]
anyhow = "1.0.79"
futures = "0.3.30"

[package]
name = "mysh"
version = "0.1.6"
edition = "2021"
rust-version = "1.68"
authors = ["James Kao <james.l.kao@gmail.com>"]
description = "Scaffolding to build interactive shells"
readme = "README.md"
keywords = ["shell", "cli", "interactive", "terminal"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/yuzuquats/mysh"

[dependencies]
anyhow = { workspace = true }
colored = "2.1.0"
ctrlc = "3.4.2"
futures = { workspace = true }
indoc = "2.0.4"

serde = "1.0.214"
serde-reflection = "0.4.0"
serde_derive = "1.0.214"
serde_json = "1.0.111"
mysh_derive = { version = "0.1.6", path = "./mysh-derive" }
thiserror = "1.0.56"
reedline = "0.36.0"
uuid = "1.10.0"
