
[workspace]
members = ["examples/simple", "mysh-derive"]

[workspace.dependencies]
anyhow = "1.0.79"
futures = "0.3.30"

[package]
authors = ["James Kao <james.l.kao@gmail.com>"]
categories = ["command-line-interface"]
description = "Scaffolding to build interactive shells"
edition = "2021"
keywords = ["shell", "cli", "interactive", "terminal"]
license = "MIT"
name = "mysh"
readme = "README.md"
repository = "https://github.com/yuzuquats/mysh"
rust-version = "1.68"
version = "0.1.6"

[dependencies]
anyhow = {workspace = true}
colored = "2.1.0"
ctrlc = "3.4.2"
futures = {workspace = true}
indoc = "2.0.4"

mysh_derive = {version = "0.1.6", path = "./mysh-derive"}
reedline = "0.36.0"
serde = "1.0.214"
serde-reflection = "0.4.0"
serde_derive = "1.0.214"
serde_json = "1.0.111"
thiserror = "1.0.56"
uuid = "1.10.0"
