[package]
name = "mysh_derive"
version = "0.1.5"
edition = "2021"
rust-version = "1.77"
authors = [
    "James Kao <james.l.kao@gmail.com>",
]
description = "Scaffolding to build interactive shells"
readme = "README.md"
keywords = ["shell", "cli", "interactive", "terminal"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/yuzuquats/mysh"

[dependencies]
anyhow = "1.0.79"
serde = "1.0.195"
serde-reflection = "0.3.6"
serde_json = "1.0.111"
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"

[lib]
proc-macro = true
